Css layout change

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -47,8 +47,17 @@
   background-size: cover;
 }
 
+html {
+  height: -webkit-fill-availabe;
+}
+
 body {
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  max-width: 1440px;
+  margin: 0 auto;
+  height: 100vh;
+  height: -webkit-fill-availabe;
 }
 
 .backgroundDash {
