--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,16 +39,16 @@
 body {
   display: flex;
   flex-direction: column;
-  max-width: 1440px;
+  max-width: 100%;
   margin: 0 auto;
   height: 100vh;
   height: -webkit-fill-availabe;
 
   background: linear-gradient(
-    to bottom,
-    rgb(5, 59, 137),
-    rgb(4, 42, 97),
-    rgb(3, 23, 52),
+    to right,
+
+    rgb(0, 4, 10),
+    rgb(0, 4, 10),
     rgb(2, 8, 17)
   );
   background-size: cover;
