Test: HeigthFill test in iphone

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,6 +54,11 @@ body {
   background-size: cover;
 }
 
+.heightFill {
+  height: 100%;
+  height: -webkit-fill-availabe;
+}
+
 input[type="range"] {
   overflow: hidden;
   -webkit-appearance: none;
