--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,7 +75,7 @@ input[type="range"]::-webkit-slider-thumb {
   appearance: none;
   width: 10px;
   height: 10px;
-  background: blueviolet;
+  background: white;
   background-size: contain;
   cursor: pointer;
   border-radius: 50%;
@@ -84,7 +84,7 @@ input[type="range"]::-webkit-slider-thumb {
 input[type="range"]::-moz-range-thumb {
   width: 10px;
   height: 10px;
-  background: blueviolet;
+  background: white;
   background-size: contain;
   cursor: pointer;
   border-radius: 50%;
@@ -93,7 +93,7 @@ input[type="range"]::-moz-range-thumb {
 input[type="range"]::-ms-thumb {
   width: 10px;
   height: 10px;
-  background: blueviolet;
+  background: white;
   background-size: contain;
   cursor: pointer;
   border-radius: 50%;
