--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -93,6 +93,20 @@ input[type="range"]::-ms-thumb {
   border-radius: 50%;
 }
 
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.scrolling-text {
+  display: inline-block;
+  animation: scroll 6s linear infinite;
+}
+
 @media (max-width: 940px) {
   input[type="range"]::-webkit-slider-thumb {
     appearance: none;
